--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,9 @@ license = "GPL"
 include = ["runekit/_resources.py"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.15"
 requests = "^2.31.0"
 PySide6 = "^6.6.0"
-PySide6-WebEngine = "^6.6.0"
 Pillow = "^10.2.0"
 numpy = ">=1.24.0"
 sysv-ipc = [{ version = "^1.1.0", platform = "linux" }]
